@@ -1,4 +1,4 @@
-$Id: README 47714 2018-05-14 18:07:32Z karl $
+$Id: README 48168 2018-07-09 17:00:10Z karl $
 Public domain.  Originally written 2005 by Karl Berry.
 
 Extra utilities we (optionally) compile for TeX Live.
@@ -39,9 +39,9 @@ vlna 1.5 - checked 10may12
 
 xindy - see just below
 
-xpdfopen 0.86 - checked 24may14
+xpdfopen 0.86 - checked 9jul18
   http://ctan.org/pkg/xpdfopen/
-  http://cs.acadiau.ca/~jdiamond/xpdfopen/
+  http://cs.acadiau.ca/~jdiamond/xpdfopen/ (404; no reply from author, 9jul18)
 
 
 xindy 2.5.1 - checked 15sep14
